# concert_helper

./: main.py  pyproject.toml  requirements.txt  test_recon.py
concert_helper/src/browser/: stealth.py
concert_helper/src/recon/: profiler.py
config/: config.yaml  profiles.yaml  settings.py
src/browser/: harvester.py  manager.py  stealth.py
src/config/: loader.py
src/recon/: profiler.py  scanner.py
src/sniper/: api_client.py  click_sniper.py  context_factory.py  engine.py  hybrid_client.py  orchestrator.py  payloads.py  stealth_actions.py
src/utils/: database.py  logger.py  proxy_provider.py
tests/: test_harvester.py  test_integration_kktix.py  test_kktix_flow.py  test_sniper_pipeline.py  verify_sniper_data.py
